# url-shortener

./: .env  Cargo.toml  Readme.md  rustfmt.toml
database/: Dockerfile  init.sql
src/: database.rs  lib.rs  main.rs  state.rs
src/api/: mod.rs  routes.rs
tests/: integration.rs
