[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
dotenv = { version = "0.15", optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
# Server
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
actix-web = "4.9"
# Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "local-time"] }
tracing-log = "0.2"
tracing-actix-web = "0.7"
# Database
deadpool = "0.12"
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-time-0_3", "with-serde_json-1"] }
uuid = { version = "1.13.2", features = ["v4"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serial_test = "3.2.0"
